# law-rag

./: README.md  compose.yml
api/: Dockerfile  pyproject.toml
api/law_texts/: BOE-A-1994-26003-consolidado.epub
api/src/: main.py  settings.py
api/src/api/home/: router.py
api/src/api/ollama/: models.py  router.py
api/src/api/rag/: router.py
api/src/clients/: ollama.py  qdrant.py
api/src/domain/: embeddings.py  epub_reader.py  llm.py  prompts.py  rag.py
web/: Dockerfile  index.html  package-lock.json  package.json
web/src/: App.vue
