[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "fastapi[standard] (>=0.133.1,<0.134.0)",
    "qdrant-client (>=1.17.0,<2.0.0)",
    "ebooklib (>=0.20,<0.21)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)"
]
